# screensaver.pyro

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  kodi-screensaver-pyro.install  rules
screensaver.pyro/: addon.xml  addon.xml.in
screensaver.pyro/resources/language/resource.language.af_za/: strings.po
screensaver.pyro/resources/language/resource.language.am_et/: strings.po
screensaver.pyro/resources/language/resource.language.ar_sa/: strings.po
screensaver.pyro/resources/language/resource.language.az_az/: strings.po
screensaver.pyro/resources/language/resource.language.be_by/: strings.po
screensaver.pyro/resources/language/resource.language.bg_bg/: strings.po
screensaver.pyro/resources/language/resource.language.bs_ba/: strings.po
screensaver.pyro/resources/language/resource.language.ca_es/: strings.po
screensaver.pyro/resources/language/resource.language.cs_cz/: strings.po
screensaver.pyro/resources/language/resource.language.cy_gb/: strings.po
screensaver.pyro/resources/language/resource.language.da_dk/: strings.po
screensaver.pyro/resources/language/resource.language.de_de/: strings.po
screensaver.pyro/resources/language/resource.language.el_gr/: strings.po
screensaver.pyro/resources/language/resource.language.en_au/: strings.po
screensaver.pyro/resources/language/resource.language.en_gb/: strings.po
src/: Pyro.cpp  Pyro.h
(+56 files in other folders)
